Make sure only the children (but not grandchildren, et al) of tab-panes get extra margin.

--- a/app/assets/stylesheets/contests.css.scss
+++ b/app/assets/stylesheets/contests.css.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.tab-pane :first-child {
+.tab-pane > :first-child {
   margin-top: 20px;
 }
